# NN-CPU

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac  oax.txt
ActivationFunction/: ActivationFunction.c  ActivationFunction.h
Layer/: Layer.c  Layer.h
LossFunction/: LossFunction.c  LossFunction.h
Model/: Model.c  Model.h
Optimizer/: Optimizer.c  Optimizer.h
activation_function/: activation_function.c
layer/: layer.c  layer.h
loss_function/: loss_function.c  loss_function.h
m4/: flags.m4
matrixOp/: matrixOp.c  matrixOp.h
matrix_op/: matrix_op.c  matrix_op.h
model/: model.c  model.h
optimizer/: optimizer.c  optimizer.h
src/: activation_function.c  activation_function.h  layer.c  layer.h  matrix_op.c  matrix_op.h  model.c  model.h  optimizer.c  optimizer.h  vector_op.c  vector_op.h
src/activation_function/: activation_function.c
src/layer/: layer.c
src/optimizer/: optimizer.c
tests/: iris.txt  test.c  testIris.c  testOAX.c
vectorOp/: vectorOp.c  vectorOp.h
